--- a/patient-batch-loader/build.gradle
+++ b/patient-batch-loader/build.gradle
@@ -136,11 +136,15 @@ dependencies {
         exclude module: 'spring-boot-starter-tomcat'
     }
     compile "org.springframework.boot:spring-boot-starter-undertow"
+    // Starter to include the Spring Batch dependencies via Spring Boot
+    compile "org.springframework.boot:spring-boot-starter-batch"
 
     testCompile ("org.springframework.boot:spring-boot-starter-test") {
         exclude group: 'com.vaadin.external.google', module: 'android-json'
     }
     testCompile "org.springframework.boot:spring-boot-test"
+    // Spring Batch testing support
+    testCompile "org.springframework.batch:spring-batch-test"
     testCompile "org.assertj:assertj-core"
     testCompile "junit:junit"
     testCompile "org.mockito:mockito-core"
