--- a/demo2/src/main/resources/application.properties
+++ b/demo2/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.username=root
 spring.datasource.password=root
 
 #spring.batch.jdbc.initialize-schema=always
+
+spring.batch.job.enabled=false
