--- a/demo2/src/main/resources/application.properties
+++ b/demo2/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.password=root
 
 #spring.batch.jdbc.initialize-schema=always
 
-spring.batch.job.enabled=false
+#spring.batch.job.enabled=false
